# mmo-monitoring

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  compose.yaml  frontend.Dockerfile  helmfile.yaml  person.Dockerfile
.github/workflows/: build.yml  release.yaml
frontend/: Cargo.toml  Dockerfile  Justfile
frontend/src/: html_template.rs  main.rs
frontend/templates/: base.html  person.html  persons.html
helm/: frontend.yaml  helmfile.yaml  person.yaml
helm/frontend/: Chart.yaml  values.yaml
helm/frontend/templates/: deployment.yaml
helm/person/: Chart.yaml  values.yaml
helm/person/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/person/templates/tests/: test-connection.yaml
person/: .env.example  Cargo.toml  Dockerfile  Justfile  compose.yaml
person-migrations/: Dockerfile  Justfile
person-migrations/migrations/: V1__init.sql
person/migrations/: 20240618182858_remove_location_step_1.sql  20240618220205_remove_location_step_2.sql
person/src/: main.rs  person.rs
