[dependencies]
askama = "0.12.1"
axum = "0.6"
clap = {version = "4.4.8", features = ["derive", "env"]}
person = {path = "../person"}
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls", "json"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"]}

[package]
edition = "2021"
name = "frontend"
version = "0.1.1"

[patch.crates-io]
hyper = {git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x"}
reqwest = {git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x"}
socket2 = {git = "https://github.com/second-state/socket2.git", branch = "v0.5.x"}
tokio = {git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x"}
